k8s/istio/new_resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neverlandvirtualservice
spec:
  hosts:
  - ReplaceIP
  gateways:
  - neverlandgateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
